<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_light"
    tools:context=".Register"
    tools:ignore="HardcodedText"
    tools:layout_editor_absoluteX="3dp"
    tools:layout_editor_absoluteY="41dp">

    <LinearLayout
        android:layout_width="389dp"
        android:layout_height="153dp"
        android:background="@drawable/gradient_background_green_header"

        android:bottom="15dp"
        android:left="15dp"
        android:right="15dp"
        android:top="15dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="266dp"
            android:layout_height="70dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="75dp"
            android:layout_marginBottom="45dp"
            android:text="Create an account"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="32dp"
        android:hint="Name"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="32dp"
        android:hint="Password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="32dp"
        android:hint="Email"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="32dp"
        android:hint="Phone number"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="470dp"
        android:layout_marginEnd="32dp"
        android:hint="Address"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_home">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


<!--    <EditText-->
<!--        android:id="@+id/name"-->
<!--        android:layout_width="308dp"-->
<!--        android:layout_height="58dp"-->
<!--        android:ems="10"-->
<!--        android:hint="Name"-->
<!--        android:importantForAutofill="no"-->
<!--        android:inputType="text"-->
<!--        android:minHeight="48dp"-->
<!--        android:textAlignment="textStart"-->
<!--        android:textColor="@color/black"-->
<!--        android:textColorHint="#A7FFEB"-->
<!--        android:textDirection="ltr"-->
<!--        android:visibility="visible"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.495"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.219" />-->

<!--    <EditText-->
<!--        android:id="@+id/email"-->
<!--        android:layout_width="310dp"-->
<!--        android:layout_height="51dp"-->
<!--        android:layout_marginTop="120dp"-->
<!--        android:autofillHints="no"-->
<!--        android:ems="10"-->
<!--        android:hint="Email"-->
<!--        android:inputType="textEmailAddress"-->
<!--        android:minHeight="48dp"-->
<!--        android:textColor="@color/black"-->
<!--        android:textColorHint="#A7FFEB"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.504"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.341"-->
<!--        tools:ignore="TextContrastCheck" />-->

<!--    <EditText-->
<!--        android:id="@+id/address"-->
<!--        android:layout_width="310dp"-->
<!--        android:layout_height="59dp"-->
<!--        android:layout_marginTop="300dp"-->
<!--        android:ems="10"-->
<!--        android:hint="Address"-->
<!--        android:importantForAutofill="no"-->
<!--        android:inputType="text"-->
<!--        android:minHeight="48dp"-->
<!--        android:textAlignment="textStart"-->
<!--        android:textColorHint="#A7FFEB"-->
<!--        android:textDirection="ltr"-->
<!--        android:visibility="visible"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.514"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.454" />-->

<!--    <EditText-->
<!--        android:id="@+id/password"-->
<!--        android:layout_width="308dp"-->
<!--        android:layout_height="55dp"-->
<!--        android:layout_marginTop="50dp"-->
<!--        android:drawableEnd="@drawable/ic_baseline_visibility_off_24"-->
<!--        android:ems="10"-->
<!--        android:hint="Password"-->
<!--        android:importantForAutofill="no"-->
<!--        android:inputType="textWebPassword"-->
<!--        android:longClickable="false"-->
<!--        android:minHeight="48dp"-->
<!--        android:textAlignment="textStart"-->
<!--        android:textColor="@color/black"-->
<!--        android:textColorHint="#A7FFEB"-->
<!--        android:textDirection="ltr"-->
<!--        android:visibility="visible"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.495"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.29" />-->

<!--    <EditText-->
<!--        android:id="@+id/phoneNumber"-->
<!--        android:layout_width="311dp"-->
<!--        android:layout_height="54dp"-->
<!--        android:layout_marginTop="250dp"-->
<!--        android:ems="10"-->
<!--        android:hint="Phone number"-->
<!--        android:importantForAutofill="no"-->
<!--        android:inputType="phone"-->
<!--        android:minHeight="48dp"-->
<!--        android:textAlignment="textStart"-->
<!--        android:textColor="@color/black"-->
<!--        android:textColorHint="#A7FFEB"-->
<!--        android:textDirection="ltr"-->
<!--        android:visibility="visible"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.51"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.342" />-->

    <Button
        android:id="@+id/loginButton"
        android:layout_width="367dp"
        android:layout_height="82dp"
        android:layout_marginTop="400dp"
        android:text="Register"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.599" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="204dp"
        android:layout_height="50dp"
        android:layout_marginTop="550dp"
        android:text="Already have an account?"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.879" />

    <Button
        android:id="@+id/goBackToLogin"
        android:layout_width="135dp"
        android:layout_height="47dp"
        android:layout_marginTop="400dp"
        android:text="SIGN IN"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.885" />

</androidx.constraintlayout.widget.ConstraintLayout>